--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="color-scheme" content="light" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rcalendar-mobile-next</title>
+    <title>跑者日历</title>
   </head>
   <body>
     <div id="root"></div>
